[gd_scene load_steps=5 format=3 uid="uid://dysobh2umi71w"]

[ext_resource type="Script" path="res://script/item/score_item/score_item.gd" id="1_7dflp"]
[ext_resource type="Texture2D" uid="uid://cohbayfcdsbx" path="res://object/score_item/score_item2/score_item2_1.png" id="1_hu0qd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfir2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rq7qt"]
size = Vector2(128, 133)

[node name="curry" type="Area2D"]
script = ExtResource("1_7dflp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xfir2")

[node name="ScoreItem21" type="Sprite2D" parent="."]
position = Vector2(1, -3)
texture = ExtResource("1_hu0qd")

[node name="item_close" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="item_close"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_rq7qt")

[connection signal="area_entered" from="." to="." method="_on_curry_area_entered"]
[connection signal="area_entered" from="item_close" to="." method="_on_item_close_area_entered"]
