[gd_scene load_steps=9 format=3 uid="uid://832ad5meuxg6"]

[ext_resource type="Script" path="res://script/item/score_item/score_item.gd" id="1_w1xci"]
[ext_resource type="Texture2D" uid="uid://bxhjhppkbjq5o" path="res://object/score_item/score_item1/score_item1_1.png" id="2_p4onk"]
[ext_resource type="Texture2D" uid="uid://caawto5r8bcnn" path="res://object/score_item/score_item1/score_item1_2.png" id="3_gyh1o"]
[ext_resource type="Texture2D" uid="uid://dysbk78dixo1w" path="res://object/score_item/score_item1/score_item1_3.png" id="4_fbhnq"]
[ext_resource type="Texture2D" uid="uid://y1idb7qqfon6" path="res://object/score_item/score_item1/score_item1_4.png" id="5_2xwv4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfir2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wnw8j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_p4onk")
}, {
"duration": 1.0,
"texture": ExtResource("3_gyh1o")
}, {
"duration": 1.0,
"texture": ExtResource("4_fbhnq")
}, {
"duration": 1.0,
"texture": ExtResource("5_2xwv4")
}],
"loop": true,
"name": &"def",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rq7qt"]
size = Vector2(128, 133)

[node name="ice" type="Area2D"]
script = ExtResource("1_w1xci")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xfir2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -11)
sprite_frames = SubResource("SpriteFrames_wnw8j")
animation = &"def"
autoplay = "def"
frame_progress = 0.00496593

[node name="item_close" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="item_close"]
shape = SubResource("RectangleShape2D_rq7qt")

[connection signal="area_entered" from="." to="." method="_on_ice_area_entered"]
[connection signal="area_entered" from="item_close" to="." method="_on_item_close_area_entered"]
