[gd_scene load_steps=5 format=3 uid="uid://ck1yah4mpl0lb"]

[ext_resource type="Script" path="res://script/item/score_item/score_item.gd" id="1_84iym"]
[ext_resource type="Texture2D" uid="uid://bvsev2pas5dvf" path="res://object/score_item/score_item5/score_item5_1.png" id="2_1akgr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfir2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rq7qt"]
size = Vector2(128, 133)

[node name="takoyaki" type="Area2D"]
script = ExtResource("1_84iym")

[node name="ScoreItem51" type="Sprite2D" parent="."]
position = Vector2(-1, -3)
texture = ExtResource("2_1akgr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xfir2")

[node name="item_close" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="item_close"]
shape = SubResource("RectangleShape2D_rq7qt")

[connection signal="area_entered" from="." to="." method="_on_takoyaki_area_entered"]
[connection signal="area_entered" from="item_close" to="." method="_on_item_close_area_entered"]
